--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/node": "^22.14.0",
+		"@types/three": "^0.175.0",
 		"daisyui": "^5.0.12",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -42,5 +44,11 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.5",
 		"vitest": "^3.0.0"
+	},
+	"dependencies": {
+		"@threlte/core": "^8.0.1",
+		"@threlte/extras": "^9.1.0",
+		"lucide-svelte": "^0.487.0",
+		"three": "^0.175.0"
 	}
 }
