--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
@@ -14,12 +13,16 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
+		"module": "es2015",
 		"moduleResolution": "bundler",
 		"typeRoots": ["./node_modules/@types", "./src/types"]
-	}
-	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
-	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
+	},
+	"exclude": [
+		"build",
+		".svelte-kit",
+		"node_modules",
+		"eslint.config.js",
+		"svelte.config.js",
+		"vite.config.ts"
+	]
 }
