--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
     expose:
       - '3000'
     labels:
-      - 'traefik.enable=true'
       - 'traefik.http.routers.rieger.rule=Host(`rieger-systems.eu`)'
       - 'traefik.http.routers.rieger.entrypoints=websecure'
       - 'traefik.http.routers.rieger.tls.certresolver=letsencrypt'
-      - 'traefik.http.services.rieger.loadbalancer.server.port=3000'
+      - 'traefik.http.routers.rieger-http.rule=Host(`rieger-systems.eu`)'
+      - 'traefik.http.routers.rieger-http.entrypoints=web'
+      - 'traefik.http.routers.rieger-http.middlewares=redirect-to-https'
+      - 'traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https'
+
     networks:
       - web
 
