--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - 'traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https'
 
     networks:
-      - web
+      - traefik_web
 
 networks:
   web:
