--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} <<'EOF'
             cd /opt/web
+            docker compose down
+            docker system prune -af
+            docker volume prune -f
             git pull
             docker compose build --no-cache
             docker compose up -d
