Umstieg auf DaisyUI - Footer/Header begonnen inkl. Sprachmodul

--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "@pinia/nuxt": "^0.11.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.4",
     "nuxt": "^3.17.0",
     "pinia": "^3.0.2",
-    "primeflex": "^4.0.0",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.3.3",
-    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "daisyui": "^5.0.30"
   }
 }
