--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "nuxt": "^3.17.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
+    "three": "^0.176.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/three": "^0.176.0",
     "daisyui": "^5.0.30"
   }
 }
