--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.4",
+    "@vueuse/core": "^13.1.0",
     "nuxt": "^3.17.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
