--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/core": "^13.1.0",
+    "@vueuse/motion": "^3.0.3",
     "nuxt": "^3.17.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
