--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/core": "^13.1.0",
     "@vueuse/motion": "^3.0.3",
+    "chart.js": "^4.4.9",
     "nuxt": "^3.17.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
     "three": "^0.176.0",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
