--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^13.1.0",
     "@vueuse/motion": "^3.0.3",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-annotation": "^3.1.0",
     "nuxt": "^3.17.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
